# inboxpilot-openenv

./: .gitignore  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  graders.py  models.py  reward.py  server.py  tasks.py
data/: task_easy.json  task_hard.json  task_medium.json
server/: app.py
tests/: test_env.py  test_graders.py
