[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "inboxpilot-openenv"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.7.4",
    "openai>=2.7.2",
    "httpx==0.27.0",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"